--- a/digi/style.css
+++ b/digi/style.css
@@ -22,26 +22,28 @@ body {
 #container {
 	margin: 5%;
 	border-radius: 5px;
-	height: auto;
 	display: inline-block;
 	width: 90%;
 }
 
 #content {
+	
   border-style: solid;
 	padding: 0px;
 	border-radius: 10px;
 	background: black;
 	margin-bottom: 8%;
-	height: auto;	
+
 }
 
 #idea {
 	background: olive;
+	padding-top:16px;
 	border-radius: 0px 0px 10px 10px;
-	padding: 5px;
 	height: 5em;
 	width: auto;
+	text-align: center;
+	vertical-align: middle;
 }
 
 #button {
