--- a/rant/animation-test/styles.css
+++ b/rant/animation-test/styles.css
@@ -18,7 +18,6 @@ img#animation-image{
 }
 
 #content {
-
 	/* opacity: 0.5; */
 	display: flex;
 	height: 100vh;
@@ -31,19 +30,19 @@ img#animation-image{
 	flex: 1;
 }
 
-textarea {
+#rant{
+	width: 100%;
 	resize: none;
 	background-color: #E1CA3C;
 	border-style: none;
-}
-
-#rant{
-	flex: 1;
-	width: 100%;
+	font-size: 24px;
+	height: 80%;
+	box-sizing: border-box;
+	word-break: break-all;
 }
 
 .fadeOut {
-	transition: opacity 0.2s ease-out, transform 0.5s ease-out, background-color 0.5s;
+	transition: opacity 0.2s ease-out,  transform 0.5s ease-out 1s, background-color 0.5s;
 	opacity: 0;
 	transform: scale(0.1);
 
