--- a/rant/animation-test/styles.css
+++ b/rant/animation-test/styles.css
@@ -4,17 +4,38 @@ body {
  padding: 0px;
  overflow: hidden;
  font-size: 24px;
+ font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3, h4 {
+	font-family: 'Sree Krushnadevaraya', serif;
+	padding-left: 1em;
+	margin: 0px;
+}
+
+textarea {
+	font-family: 'Open Sans', sans-serif;
+}
+
+button:hover{
+	opacity: 0.8;
 }
 
 img {
 	border-style: none;
-	width: 100%;
-	height: 100%;
+	width: 10em;
+	height: 10em;
+	border-radius: 5px;
+	box-shadow: 0px 0px 10px #8ad2d1;
 }
 
 img#animation-image{
 	z-index: -10;
 	position: absolute;
+	border-radius: none;
+	box-shadow: none;
+	width: 100%;
+	height: 100%;
 }
 
 #content {
@@ -23,27 +44,160 @@ img#animation-image{
 	height: 100vh;
 	/* background-color: aqua; */
 	display: flex;
+	flex-direction: column;
+	animation: fadein 2s;
 }
 
 #input-form{
 	margin: 20px;
 	flex: 1;
+	font-size: 24px;
 }
 
 #rant{
 	width: 100%;
 	resize: none;
-	background-color: #E1CA3C;
+	background-color: #fdf49b;
 	border-style: none;
-	font-size: 24px;
-	height: 80%;
+	font-size: 2em;
+	height: 100%;
 	box-sizing: border-box;
 	word-break: break-all;
+	padding: 1em;
+	border-radius: 1em;
+	box-shadow: inset 0px 0px 10px #8ad2d1;
+}
+
+#rant:focus {
+	outline: none;
 }
 
 .fadeOut {
-	transition: opacity 0.2s ease-out,  transform 0.5s ease-out 1s, background-color 0.5s;
+	transition: opacity 0.4s ease-out,  transform 1s ease-out 1s, background-color 0.5s;
 	opacity: 0;
 	transform: scale(0.1);
+}
 
+#title-container {
+	min-height: 10em;
+	padding: 1em;
+	padding-bottom: 0px;
+	display: flex;
+}
+
+#avatar-container{
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	align-items: center;
+}
+
+#avatar-container > img {
+	flex: 1;
+	align-content: center;
+	justify-content: center;
+	display: flex;
+}
+
+#description-container {
+	flex: 1;
+	padding: 1em;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-content: flex-start;
+}
+
+#footer-container {
+	display: flex;
+	min-height: 15%;
+	flex-direction: row;
+	margin-bottom: 16px;
+}
+
+#submit-button {
+	align-content: center;
+	justify-content: center;
+	display: flex;
+	padding: 1em;
+	margin: 1em;
+}
+
+#submit-button > button {
+	font-size: 2em;
+	padding: 0.2em;
+	margin: auto;
+	border: none;
+	background-color: green;
+	color: white;
+	border-radius: 10px;
+}
+
+#footer-description {
+	width: 70%;
+	justify-content: center;
+	align-content: center;
+	display: flex;
+	flex-direction: column;
+}
+
+/* Tablet Styles */
+@media screen and (max-width: 992px){
+	body{
+		font-size: 36px;
+	}
+}
+
+@keyframes fadein {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
 }
