Responsive header size if screen too small

--- a/src/components/HeaderBar.css
+++ b/src/components/HeaderBar.css
@@ -18,6 +18,12 @@
 	padding-left: 4em;
 }
 
+@media only screen and (max-width: 400px) {
+	.Header{
+		font-size: 1.4em;
+	}
+}
+
 
 .Header-img{
 	position: absolute;
