--- a/src/components/Rant/Rant.css
+++ b/src/components/Rant/Rant.css
@@ -23,7 +23,7 @@
 
 .Rant-input-container {
 	display: flex;
-	background-color: pink;
+	background-color: #f2c5dc;
 	padding: 1em;
 	flex: 1;
 	min-height: 50%;
