--- a/src/components/HeaderBar.css
+++ b/src/components/HeaderBar.css
@@ -16,6 +16,7 @@
 	justify-content: center;
 	text-align: left;
 	padding-left: 4em;
+	line-height: normal;
 }
 
 @media only screen and (max-width: 400px) {
