--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 
 .App-header-top-bar{
-	background-color: #282c34;
+	background-color: #0000ff;
 	height: 4em;
 	display: flex;
 	flex-direction: column;
